translation tasker side

--- a/i18n/locales/ar.json
+++ b/i18n/locales/ar.json
@@ -348,7 +348,15 @@
     "confirmMessage": "لا يمكنك حذف الملفات التي تم تحميلها. هل تريد المتابعة؟",
     "yes": "نعم",
     "no": "لا",
-    "uploading": "جارٍ تحميل المستند..."
+    "uploading": "جارٍ تحميل المستند...",
+    "finalTitle": "فحص أخير!",
+    "finalDesc": "للتحقق، يرجى رفع بطاقة الهوية الخاصة بك. هذا يحافظ على أمان حسابك ومنصتنا.",
+    "uploadDocument": "رفع مستند",
+    "continueToHome": "متابعة إلى الصفحة الرئيسية",
+    "uploadFailedTitle": "فشل في الرفع",
+    "uploadFailedMessage": "لم يتم رفع المستند. يرجى المحاولة مرة أخرى.",
+    "deleteFailedTitle": "فشل في الحذف",
+    "deleteFailedMessage": "لم يتم حذف المستند."
   },
   "taskerEditProfile": {
     "title": "تعديل الملف الشخصي",
@@ -361,7 +369,20 @@
     "about": "نبذة (150 حرفًا كحد أقصى)",
     "save": "حفظ التغييرات",
     "savedTitle": "تم التحديث",
-    "savedMessage": "تم تحديث الملف الشخصي بنجاح."
+    "savedMessage": "تم تحديث الملف الشخصي بنجاح.",
+    "instruction": "لإيجاد الوظائف يجب عليك إكمال ملفك الشخصي. املأ جميع الحقول أدناه.",
+    "incompleteTitle": "ملف شخصي غير مكتمل",
+    "incompleteMessage": "يرجى ملء جميع الحقول قبل حفظ ملفك الشخصي.",
+    "invalidEmailTitle": "بريد إلكتروني غير صحيح",
+    "invalidEmailMessage": "يرجى إدخال عنوان بريد إلكتروني صحيح.",
+    "invalidPhoneTitle": "رقم هاتف غير صحيح",
+    "invalidPhoneMessage": "يجب أن يكون رقم الهاتف من 8 إلى 15 رقمًا ويحتوي على أرقام فقط.",
+    "updateSuccessTitle": "تم تحديث الملف الشخصي",
+    "updateSuccessMessage": "تم حفظ ملفك الشخصي بنجاح.",
+    "ok": "موافق",
+    "errorTitle": "خطأ",
+    "updateFailedMessage": "فشل في تحديث الملف الشخصي.",
+    "generalErrorMessage": "حدث خطأ ما. يرجى المحاولة مرة أخرى."
   },
   "taskerExplore": {
     "header": "استكشاف المهام",
@@ -371,10 +392,30 @@
     "viewDetails": "عرض التفاصيل",
     "noTasks": "لا توجد مهام متاحة حاليًا.",
     "greeting": "مرحباً {{name}}،",
-    "subGreeting": "ابحث عن مهمتك القادمة وابدأ في الكسب!"
+    "subGreeting": "ابحث عن مهمتك القادمة وابدأ في الكسب!",
+    "searchPlaceholder": "البحث بعنوان المهمة...",
+    "posted": "نُشرت",
+    "viewDetails": "عرض التفاصيل",
+    "clearFilter": "إزالة الفلتر",
+    "verifyPending": "مستنداتك ما زالت تحتاج للمراجعة (قد يستغرق الأمر حتى 48 ساعة)،",
+    "contactUs": "تواصل معنا",
+      "incompleteProfile": "لإيجاد الوظائف يجب إكمال ملفك الشخصي.",
+  "finishProfile": "اضغط هنا لإنهاء ملفك الشخصي",
+  "jobTypes": {
+    "handyman": "أعمال الصيانة",
+    "moving": "النقل",
+    "ikea assembly": "تركيب أثاث إيكيا",
+    "cleaning": "التنظيف",
+    "shopping & delivery": "التسوق والتوصيل",
+    "yardwork services": "أعمال الحديقة",
+    "dog walking": "تمشية الكلاب",
+    "other": "أخرى"
+  }
   },
   "taskerMessages": {
-    "title": "الرسائل"
+    "title": "الرسائل",
+    "empty": "لا توجد رسائل بعد",
+    "searchPlaceholder": "البحث"
   },
   "taskerPayments": {
     "title": "مدفوعاتي",
@@ -386,8 +427,8 @@
     "title": "تقييماتي",
     "average": "متوسط التقييم",
     "empty": "لم تستلم أي تقييمات بعد.",
-    "averageText": "تقييمك المتوسط: {{rating}} ⭐"
-
+    "averageText": "تقييمك المتوسط: {{rating}} ⭐",
+    "clientName": "اسم العميل:"
   },
  "taskerMyTasks": {
   "status": "الحالة",
@@ -403,7 +444,29 @@
   "noTasks": "لا توجد مهام",
   "chat": "دردشة",
   "report": "إبلاغ",
-  "cancel": "إلغاء"
+  "cancel": "إلغاء",
+  "previous": "السابقة",
+  "viewDetails": "عرض التفاصيل",
+  "completed": "مكتملة",
+  "cancelledByYou": "ألغيت بواسطتك",
+  "cancelledByClient": "ألغيت بواسطة العميل",
+  "reportClient": "الإبلاغ عن العميل",
+  "reportPrompt": "أدخل سبب الإبلاغ عن هذا العميل:",
+  "reportCancel": "إلغاء",
+  "reportSubmit": "إرسال",
+  "reportedTitle": "تم الإبلاغ",
+  "reportedMessage": "تم الإبلاغ عن العميل بنجاح.",
+  "errorTitle": "خطأ",
+  "reportError": "فشل في إرسال البلاغ.",
+  "loadError": "فشل في تحميل المهام.",
+  "cancelConfirm": "هل أنت متأكد أنك تريد الإلغاء؟",
+  "no": "لا",
+  "yes": "نعم",
+  "cancelSuccess": "تم الإلغاء بنجاح",
+  "cancelError": "حدث خطأ ما.",
+  "verifyPending": "مستنداتك ما زالت تحتاج للمراجعة (قد يستغرق الأمر حتى 48 ساعة)،",
+  "contactUs": "تواصل معنا",
+  "submittingReport": "جاري إرسال البلاغ..."
 },
   "taskerNotifications": {
     "title": "الإشعارات",
@@ -416,27 +479,43 @@
   "taskerProfile": {
   "edit": "تعديل الملف الشخصي",
   "documents": "المستندات المرفوعة",
+  "loadError": "فشل في تحميل ملف المنفذ الشخصي.",
+  "location": "الموقع:",
+  "experience": "الخبرة:",
+  "skills": "المهارات:",
+  "notProvided": "غير مقدم",
+  "about": "حول:",
+  "reviews": "التقييمات",
+  "avgRating": "متوسط التقييم:",
+  "noReviews": "لا توجد تقييمات بعد",
   "bank": "الحساب البنكي",
   "payments": "مدفوعاتي",
   "reviews": "تقييماتي",
   "settings": "الإعدادات",
   "logout": "تسجيل الخروج",
-  "loggedOut": "تم تسجيل الخروج.",
-  "managePhotoTitle": "إدارة صورة الملف الشخصي",
-  "chooseNewPhoto": "اختر صورة جديدة",
-  "removePhoto": "إزالة الصورة",
+  "changePassword": "تغيير كلمة المرور",
+  "verifiedTasker": "منفذ معتمد",
+  "verificationDeclined": "تم رفض التحقق",
+  "verificationPending": "التحقق معلق",
+  "logoutConfirmTitle": "تسجيل الخروج",
+  "logoutConfirmMessage": "هل أنت متأكد أنك تريد تسجيل الخروج؟",
   "cancel": "إلغاء",
-  "logoutConfirmTitle": "هل أنت متأكد أنك تريد تسجيل الخروج؟",
-  "logoutConfirmMessage": "ستحتاج إلى تسجيل الدخول مرة أخرى لاستخدام التطبيق."
+  "managePhotoTitle": "إدارة الصورة",
+  "chooseNewPhoto": "اختيار صورة جديدة",
+  "removePhoto": "إزالة الصورة",
+  "uploadFailed": "فشل في الرفع",
+  "uploadFailedMessage": "لم يتم رفع الصورة. حاول مرة أخرى.",
+  "removePhotoError": "خطأ",
+  "removePhotoErrorMessage": "لم يتم إزالة صورة الملف الشخصي."
 },
 "taskerSettings": {
   "title": "الإعدادات",
   "open": "جاري فتح",
-  "about": "معلومات عنا",
+  "about": "حول",
   "privacy": "سياسة الخصوصية",
   "terms": "الشروط والأحكام",
   "faq": "الأسئلة الشائعة",
-  "contact": "الدعم الفني",
+  "contact": "تواصل معنا",
   "logout": "تسجيل الخروج",
   "logoutMsg": "تم تسجيل خروجك بنجاح."
 },
