--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -349,10 +349,18 @@
     "uploadedTitle": "Uploaded",
     "uploadedMessage": "Your document has been uploaded successfully.",
     "confirmTitle": "Are you sure?",
-  "confirmMessage": "You cannot delete uploaded files. Do you want to continue?",
-  "yes": "Yes",
-  "no": "No",
-  "uploading": "Uploading document..."
+    "confirmMessage": "You cannot delete uploaded files. Do you want to continue?",
+    "yes": "Yes",
+    "no": "No",
+    "uploading": "Uploading document...",
+    "finalTitle": "Final Check!",
+    "finalDesc": "For verification, please upload your CPR. This keeps your account and our platform secure.",
+    "uploadDocument": "Upload Document",
+    "continueToHome": "Continue to Home",
+    "uploadFailedTitle": "Upload Failed",
+    "uploadFailedMessage": "Could not upload document. Please try again.",
+    "deleteFailedTitle": "Delete Failed",
+    "deleteFailedMessage": "Could not delete document."
   },
   "taskerEditProfile": {
     "title": "Edit Profile",
@@ -365,7 +373,20 @@
     "about": "About (max 150 characters)",
     "save": "Save Changes",
     "savedTitle": "Profile Updated",
-    "savedMessage": "Your profile has been successfully updated."
+    "savedMessage": "Your profile has been successfully updated.",
+    "instruction": "To find jobs you must complete your profile. Fill out all fields below.",
+    "incompleteTitle": "Incomplete Profile",
+    "incompleteMessage": "Please fill out all fields before saving your profile.",
+    "invalidEmailTitle": "Invalid Email",
+    "invalidEmailMessage": "Please enter a valid email address.",
+    "invalidPhoneTitle": "Invalid Phone Number",
+    "invalidPhoneMessage": "Phone number must be 8 to 15 digits and contain only numbers.",
+    "updateSuccessTitle": "Profile Updated",
+    "updateSuccessMessage": "Your profile has been saved successfully.",
+    "ok": "OK",
+    "errorTitle": "Error",
+    "updateFailedMessage": "Failed to update profile.",
+    "generalErrorMessage": "Something went wrong. Please try again."
   },
   "taskerExplore": {
     "header": "Explore Tasks",
@@ -375,10 +396,30 @@
     "viewDetails": "View Details",
     "noTasks": "No tasks available right now.",
     "greeting": "Hi {{name}},",
-  "subGreeting": "Let's find some tasks to do!"
+  "subGreeting": "Let's find some tasks to do!",
+  "searchPlaceholder": "Search by job title...",
+  "posted": "Posted",
+  "viewDetails": "View Details",
+  "clearFilter": "Clear Filter",
+  "verifyPending": "Your documents still need to be verified (this may take up to 48 hours),",
+  "contactUs": "Contact us",
+  "incompleteProfile": "To find jobs you must complete your profile.",
+  "finishProfile": "Press here to finish your profile",
+  "jobTypes": {
+    "handyman": "Handyman",
+    "moving": "Moving",
+    "ikea assembly": "IKEA assembly",
+    "cleaning": "Cleaning",
+    "shopping & delivery": "Shopping & Delivery",
+    "yardwork services": "Yardwork Services",
+    "dog walking": "Dog Walking",
+    "other": "Other"
+  }
   },
   "taskerMessages": {
-    "title": "Messages"
+    "title": "Messages",
+    "empty": "No messages yet",
+    "searchPlaceholder": "Search"
   },
   "taskerPayments": {
     "title": "My Payments",
@@ -390,8 +431,8 @@
     "title": "My Reviews",
     "average": "Average Rating",
     "empty": "You have not received any reviews yet.",
-    "averageText": "Your average rating: {{rating}} ⭐"
-
+    "averageText": "Your average rating: {{rating}} ⭐",
+    "clientName": "Client Name:"
   },
   "taskerMyTasks": {
   "status": "Status",
@@ -407,7 +448,29 @@
   "noTasks": "No tasks found",
   "chat": "Chat",
   "report": "Report",
-  "cancel": "Cancel"
+  "cancel": "Cancel",
+  "previous": "Previous",
+  "viewDetails": "View Details",
+  "completed": "Completed",
+  "cancelledByYou": "Cancelled by you",
+  "cancelledByClient": "Cancelled by Client",
+  "reportClient": "Report Client",
+  "reportPrompt": "Enter reason for reporting this client:",
+  "reportCancel": "Cancel",
+  "reportSubmit": "Submit",
+  "reportedTitle": "Reported",
+  "reportedMessage": "Client has been reported successfully.",
+  "errorTitle": "Error",
+  "reportError": "Failed to submit report.",
+  "loadError": "Failed to load tasks.",
+  "cancelConfirm": "Are you sure you want to cancel?",
+  "no": "No",
+  "yes": "Yes",
+  "cancelSuccess": "Cancelled successfully",
+  "cancelError": "Something went wrong.",
+  "verifyPending": "Your documents still need to be verified (this may take up to 48 hours),",
+  "contactUs": "Contact us",
+  "submittingReport": "Submitting Report..."
 },
 
   "taskerNotifications": {
@@ -421,27 +484,44 @@
   "taskerProfile": {
   "edit": "Edit Profile",
   "documents": "Uploaded Documents",
+  "loadError": "Failed to load tasker profile.",
+  "location": "Location:",
+  "experience": "Experience:",
+  "skills": "Skills:",
+  "notProvided": "Not provided",
+  "about": "About:",
+  "reviews": "Reviews",
+  "avgRating": "Avg Rating:",
+  "noReviews": "No reviews yet",
   "bank": "Bank Account",
   "payments": "My Payments",
   "reviews": "My Reviews",
   "settings": "Settings",
   "loggedOut": "You have been logged out.",
-  "managePhotoTitle": "Manage Profile Picture",
+  "changePassword": "Change Password",
+  "verifiedTasker": "Verified Tasker",
+  "verificationDeclined": "Verification Declined",
+  "verificationPending": "Verification Pending",
+  "logoutConfirmTitle": "Logout",
+  "logoutConfirmMessage": "Are you sure you want to logout?",
+  "cancel": "Cancel",
+  "logout": "Logout",
+  "managePhotoTitle": "Manage Photo",
   "chooseNewPhoto": "Choose New Photo",
   "removePhoto": "Remove Photo",
-  "logoutConfirmTitle": "Are you sure you’d like to logout?",
-  "logoutConfirmMessage": "You will need to log in again to continue using the app.",
-  "cancel": "Cancel",
-  "logout": "Logout"
+  "uploadFailed": "Upload failed",
+  "uploadFailedMessage": "Could not upload image. Try again.",
+  "removePhotoError": "Error",
+  "removePhotoErrorMessage": "Could not remove profile image."
 },
 "taskerSettings": {
   "title": "Settings",
   "open": "Opening",
-  "about": "About Us",
+  "about": "About",
   "privacy": "Privacy Policy",
-  "terms": "Terms & Conditions",
-  "faq": "FAQs",
-  "contact": "Contact Support",
+  "terms": "Terms and Conditions",
+  "faq": "FAQ",
+  "contact": "Contact Us",
   "logout": "Log Out",
   "logoutMsg": "You’ve been logged out successfully."
 },
