updated pp and tc

--- a/i18n/locales/ar.json
+++ b/i18n/locales/ar.json
@@ -519,6 +519,56 @@
   "logout": "تسجيل الخروج",
   "logoutMsg": "تم تسجيل خروجك بنجاح."
 },
+"termsAndConditions": {
+  "title": "الشروط والأحكام",
+  "effectiveDate": "تاريخ السريان:",
+  "heading1": "١. التفسير والتعريفات",
+  "section1": "تاسك، نحن، نا، أو الخاص بنا يشير إلى الفريق الذي يشغل تطبيق تاسك. العميل يعني المستخدم الذي يسعى للحصول على الخدمات؛ المنفذ يعني المستخدم الذي يقدم الخدمات. المحتوى يشير إلى أي معلومات أو مواد مقدمة عبر التطبيق.",
+  "heading2": "٢. الإقرار",
+  "section2": "تشكل هذه الشروط اتفاقية ملزمة قانونياً بينك وبين تاسك. باستخدام التطبيق، فإنك تقبل وتوافق صراحة على الالتزام بهذه الشروط وسياسة الخصوصية الخاصة بنا. لا تستخدم التطبيق إذا كنت لا توافق.",
+  "heading3": "٣. الوضع القانوني",
+  "section3": "يتم تشغيل تاسك من قبل مجموعة من الأفراد وهو غير مؤسس أو مسجل كشركة في البحرين. يعمل تاسك فقط كمنصة وسيطة محايدة - وليس كصاحب عمل أو ممثل أو ضامن لأي مستخدم.",
+  "heading4": "٤. وصف الخدمة",
+  "section4": "تاسك يمكّن التواصل والتنسيق بين العملاء والمنفذين. تاسك لا يقوم بـ: • فحص هويات المستخدمين أو مهاراتهم أو مؤهلاتهم • إدارة التسعير أو التنفيذ أو جودة الخدمات • الإشراف على أو توجيه أي مهمة\n\nجميع التفاعلات والاتفاقيات والخدمات هي بين المستخدمين. تاسك لا يضمن أي نتيجة.",
+  "heading5": "٥. المحتوى والتزامات المستخدم",
+  "section5": "تحتفظ بملكية المحتوى الخاص بك، لكنك تمنح تاسك ترخيصاً لاستخدامه. العملاء والمنفذون مسؤولون عن ضمان أن المحتوى قانوني ودقيق ولا ينتهك حقوق الآخرين.\n\nالمحتوى المحظور يشمل على سبيل المثال لا الحصر: • المحتوى غير القانوني أو التشهيري أو التمييزي • البيانات الشخصية غير المصرح بها • البرامج الضارة أو الرسائل غير المرغوب فيها",
+  "heading6": "٦. تحديد المسؤولية",
+  "section6": "إلى أقصى حد قانوني في إطار القانون البحريني، تاسك غير مسؤول عن أي خسارة أو إصابة أو أضرار ناشئة عن التفاعلات بين المستخدمين. هذا يشمل فيما يتعلق بـ: • أداء المهام أو التأخير أو الإلغاءات • سوء السلوك أو الإهمال • نزاعات الدفع أو عدم الرضا عن الخدمة • سوء الاستخدام أو الوصول غير المصرح به للمحتوى أو الوثائق\n\nتستخدم التطبيق على مسؤوليتك الخاصة بالكامل.",
+  "heading7": "٧. المدفوعات",
+  "section7": "قد يسهل تاسك الاتصالات مع معالجات الدفع، لكن تاسك لا يعالج أو يحتفظ بالأموال. تاسك غير مسؤول عن فشل المعاملات أو النزاعات - يجب حلها مباشرة بين المستخدمين أو عبر مقدم خدمة الدفع.",
+  "heading8": "٨. الملكية الفكرية",
+  "section8": "جميع العلامات التجارية والأكواد والمواد الخاصة بالتطبيق مملوكة لتاسك أو المرخصين. لا يجوز لك نسخها أو استخدامها دون إذن مكتوب مسبق.",
+  "heading9": "٩. تعليق الحساب والإنهاء",
+  "section9": "قد يعلق تاسك أو ينهي وصول المستخدم في أي وقت، مع أو بدون إشعار، لأي سبب - خاصة في حالات الاشتباه في الاحتيال أو الإساءة أو انتهاك الشروط.",
+  "heading10": "١٠. القانون الحاكم والاختصاص القضائي",
+  "section10": "تخضع هذه الشروط حصرياً لقوانين مملكة البحرين. يجب رفع أي نزاع فقط في محاكم البحرين. تتنازل عن أي اعتراضات قضائية.",
+  "heading11": "١١. تغييرات على الشروط",
+  "section11": "قد نحدث هذه الشروط بشكل دوري. ستظهر كل نسخة تاريخ سريان محدث. الاستمرار في استخدام التطبيق بعد التحديث يشكل قبولاً للشروط الجديدة."
+},
+"privacyPolicy": {
+  "title": "سياسة الخصوصية",
+  "effectiveDate": "تاريخ السريان:",
+  "heading1": "١. هوية المتحكم",
+  "section1": "يتم تشغيل تاسك من قبل فريق من الأفراد وليس شركة مسجلة. تحدد هذه السياسة جمع واستخدام ومعالجة البيانات الشخصية في إطار القانون البحريني.",
+  "heading2": "٢. المعلومات التي نجمعها",
+  "section2": "نجمع:\n١. البيانات المقدمة من المستخدم: الاسم، البريد الإلكتروني، رقم الهاتف، تفاصيل الملف الشخصي، الرسائل، التقييمات.\n٢. بيانات الاستخدام: عنوان IP، نوع الجهاز، نظام التشغيل، سجلات الاستخدام.\n٣. بيانات الموقع: إذا سُمح، لتمكين المطابقة المحلية.\n٤. وثائق الهوية الشخصية: بطاقات الهوية، جوازات السفر، رخص القيادة، الشهادات، المقدمة طوعياً للتحقق من هوية المستخدم أو المؤهلات.",
+  "heading3": "٣. استخدام المعلومات",
+  "section3": "تستخدم بياناتك لـ:\n• تشغيل وتحسين التطبيق\n• تسهيل المطابقة والمراسلة والتنسيق\n• التحقق من أوراق اعتماد المستخدم عند الضرورة\n• منع الاحتيال أو الإساءة\n• الامتثال للطلبات القانونية من السلطات البحرينية",
+  "heading4": "٤. مشاركة البيانات",
+  "section4": "قد نشارك معلوماتك مع:\n• مقدمي الخدمات (مثل الاستضافة، التحليلات، الاتصالات، معالجات الدفع) في إطار اتفاقيات السرية\n• المستخدمين الآخرين، حسب الضرورة لتقديم الخدمات\n• السلطات القانونية، عندما يتطلب القانون البحريني ذلك\n\nنحن لا نبيع أو نؤجر بياناتك الشخصية.",
+  "heading5": "٥. الاحتفاظ بالبيانات",
+  "section5": "نحتفظ بالبيانات فقط حسب الضرورة لتقديم الخدمات، والامتثال للالتزامات القانونية، وحل النزاعات، أو إنفاذ شروطنا. قد يتم الاحتفاظ بمعلومات الحساب المحذوف إذا كان مطلوباً بموجب القانون.",
+  "heading6": "٦. حقوقك",
+  "section6": "يمكنك:\n• الوصول إلى بياناتك الشخصية وتحديثها\n• طلب حذف حسابك وبياناتك\n• سحب الموافقة على معالجة بيانات معينة (مما قد يحد من الوصول للميزات)\n\nقدم الطلبات باستخدام قنوات الدعم داخل التطبيق.",
+  "heading7": "٧. الأمان",
+  "section7": "نستخدم تدابير تقنية وتنظيمية معقولة لحماية بياناتك. ومع ذلك، لا يوجد نظام منيع. بتقديم المستندات الشخصية، فإنك تقبل أن تاسك غير مسؤول عن الوصول غير المصرح به أو الإساءة خارج سيطرتنا.",
+  "heading8": "٨. خصوصية الأطفال",
+  "section8": "التطبيق مخصص للمستخدمين من عمر ١٨ سنة فما فوق. إذا علمنا أن البيانات الشخصية تم جمعها من شخص دون سن ١٨ بدون موافقة الوالدين، سنحذفها فوراً.",
+  "heading9": "٩. نقل البيانات",
+  "section9": "قد تتم معالجة أو تخزين بياناتك في البحرين أو في الخارج من قبل مقدمي خدمات طرف ثالث موثوقين. باستخدام التطبيق، فإنك توافق على هذه النقلات الدولية.",
+  "heading10": "١٠. تحديثات السياسة",
+  "section10": "قد يتم تحديث هذه السياسة أحياناً. سيعكس تاريخ السريان آخر مراجعة. الاستمرار في الاستخدام يشكل قبولاً للتحديثات."
+},
 "taskerTaskDetails": {
   "location": "الموقع",
   "price": "السعر المعروض",
