--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -525,6 +525,56 @@
   "logout": "Log Out",
   "logoutMsg": "You’ve been logged out successfully."
 },
+"termsAndConditions": {
+  "title": "Terms and Conditions",
+  "effectiveDate": "Effective Date:",
+  "heading1": "1. Interpretation & Definitions",
+  "section1": "Task, we, us, or our refers to the team that operates the Task app. Client means a user seeking to procure services; Tasker means a user providing services. Content refers to any information or materials submitted via the App.",
+  "heading2": "2. Acknowledgement", 
+  "section2": "These Terms form a legally binding agreement between you and Task. By using the App, you expressly accept and agree to abide by these Terms and our Privacy Policy. Do not use the App if you do not agree.",
+  "heading3": "3. Legal Status",
+  "section3": "Task is operated by a group of individuals and is not incorporated or registered as a company in Bahrain. Task acts solely as a neutral intermediary platform—not as an employer, representative, or guarantor of any user.",
+  "heading4": "4. Service Description",
+  "section4": "Task enables communication and coordination between Clients and Taskers. Task does not: • Vet user identities, skills, or qualifications • Manage pricing, execution, or quality of services • Supervise or direct any task\n\nAll engagement, agreements, and services are user-to-user. Task does not guarantee any outcome.",
+  "heading5": "5. Content & User Obligations",
+  "section5": "You retain ownership of your Content, but license Task to use it. Clients and Taskers are responsible for ensuring that Content is lawful, accurate, and does not infringe others' rights.\n\nProhibited Content includes but is not limited to: • Illegal, defamatory, or discriminatory content • Unauthorized personal data • Malware or spam",
+  "heading6": "6. Limitation of Liability",
+  "section6": "To the fullest legal extent under Bahraini law, Task is not liable for any loss, injury, or damages arising from interactions between users. This includes in connection to: • Task performance, delays, or cancellations • Misconduct or negligence • Payment disputes or service dissatisfaction • Misuse or unauthorized access to Content or documents\n\nYou use the App entirely at your own risk.",
+  "heading7": "7. Payments",
+  "section7": "Task may facilitate connections with payment processors, but Task does not process or hold funds. Task is not liable for transaction failures or disputes—those must be resolved directly between the users or via the payment provider.",
+  "heading8": "8. Intellectual Property",
+  "section8": "All App branding, code, and materials are owned by Task or licensors. You may not copy or use them without prior written permission.",
+  "heading9": "9. Account Suspension & Termination",
+  "section9": "Task may suspend or terminate user access at any time, with or without notice, for any reason—especially in cases of suspected fraud, abuse, or Terms violation.",
+  "heading10": "10. Governing Law & Jurisdiction",
+  "section10": "These Terms are governed exclusively by the laws of the Kingdom of Bahrain. Any dispute must be brought only in the courts of Bahrain. You waive any jurisdictional objections.",
+  "heading11": "11. Changes to Terms",
+  "section11": "We may update these Terms periodically. Each version will show an updated Effective Date. Continued use of the App post-update constitutes acceptance of the new Terms."
+},
+"privacyPolicy": {
+  "title": "Privacy Policy",
+  "effectiveDate": "Effective Date:",
+  "heading1": "1. Controller Identity",
+  "section1": "Task is operated by a team of individuals and is not a registered company. This Policy outlines the collection, use, and processing of personal data under Bahraini law.",
+  "heading2": "2. Information We Collect",
+  "section2": "We collect:\n1. User-provided data: name, email, phone number, profile details, messages, reviews.\n2. Usage data: IP address, device type, operating system, usage logs.\n3. Location data: if permitted, to enable local matching.\n4. Personal identification documents: IDs, passports, driver's licenses, certifications, submitted voluntarily to verify user identity or qualifications.",
+  "heading3": "3. Use of Information",
+  "section3": "Your data is used to:\n• Operate and improve the App\n• Facilitate matching, messaging, and coordination\n• Verify user credentials when necessary\n• Prevent fraud or abuse\n• Comply with legal requests from Bahraini authorities",
+  "heading4": "4. Data Sharing",
+  "section4": "We may share your information with:\n• Service providers (e.g., hosting, analytics, communications, payment processors) under confidentiality agreements\n• Other users, as necessary to deliver services\n• Legal authorities, when required by Bahraini law\n\nWe do not sell or rent your personal data.",
+  "heading5": "5. Data Retention",
+  "section5": "We retain data only as necessary to provide services, comply with legal obligations, resolve disputes, or enforce our Terms. Deleted account info may be retained if required by law.",
+  "heading6": "6. Your Rights",
+  "section6": "You may:\n• Access and update your personal data\n• Request deletion of your account and data\n• Withdraw consent to certain data processing (which may limit feature access)\n\nSubmit requests using the support channels within the App.",
+  "heading7": "7. Security",
+  "section7": "We employ reasonable technical and organizational measures to protect your data. However, no system is invulnerable. By submitting personal documents, you accept that Task is not liable for unauthorized access or misuse beyond our control.",
+  "heading8": "8. Children's Privacy",
+  "section8": "The App is intended for users 18 years and older. If we learn personal data has been collected from someone under 18 without parental consent, we will delete it promptly.",
+  "heading9": "9. Data Transfers",
+  "section9": "Your data may be processed or stored in Bahrain or abroad by trusted third-party providers. By using the App, you consent to such international transfers.",
+  "heading10": "10. Policy Updates",
+  "section10": "This Policy may be updated occasionally. The Effective Date will reflect the latest revision. Continued use constitutes acceptance of updates."
+},
 "taskerTaskDetails": {
   "location": "Location",
   "price": "Offered Price",
