updated pp and tc

--- a/i18n/locales/ar.json
+++ b/i18n/locales/ar.json
@@ -10,6 +10,7 @@
 },
 "clientDescription": "ابحث عن مقدمي خدمات موثوقين لإنجاز مهامك.",
 "taskerDescription": "احصل على عملاء يبحثون عن خدماتك.",
+"tagline": "مساعدة موثوقة على بُعد مهمة واحدة",
 "language": {
   "changedEn": "Language changed to English",
   "changedAr": "تم تغيير اللغة إلى العربية"
