--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -10,6 +10,7 @@
 },
 "clientDescription": "Find trusted taskers to get your chores done.",
 "taskerDescription": "Get hired by clients looking for your services.",
+"tagline": "Reliable Help Just a Task Away",
 "language": {
   "changedEn": "Language changed to English",
   "changedAr": "تم تغيير اللغة إلى العربية"
