--- a/i18n/locales/ar.json
+++ b/i18n/locales/ar.json
@@ -612,12 +612,24 @@
   "loadingBidMessage": "يرجى الانتظار أثناء تحميل تفاصيل عرضك.",
   "submittingBid": "جاري تقديم العرض...",
   "invalidBidTitle": "عرض غير صالح",
-  "invalidBidMessage": "الحد الأدنى للمزايدة هو 0.1 دينار بحريني."
-
-
+  "invalidBidMessage": "الحد الأدنى للمزايدة هو 0.1 دينار بحريني.",
+  "alreadyBidTitle": "تم تقديم عرض بالفعل",
+  "alreadyBidMessage": "لقد قدمت عرضاً لهذه المهمة بالفعل.",
+  "accessDeniedTitle": "الوصول مرفوض",
+  "accessDeniedMessage": "يجب أن تكون معتمداً لتقديم عرض.",
+  "ok": "موافق",
+  "bidSubmitError": "حدث خطأ أثناء إرسال العرض.",
+  "noBidFoundTitle": "لم يتم العثور على عرض",
+  "noBidFoundMessage": "لم تقدم عرضاً لهذه المهمة بعد.",
+  "cannotEditTitle": "لا يمكن التعديل",
+  "cannotEditMessage": "هذه المهمة لم تعد تقبل العروض.",
+  "bidUpdateError": "حدث خطأ أثناء تحديث العرض.",
+  "images": "الصور",
+  "noImages": "لا توجد صور",
+  "biddingClosed": "تم إغلاق المزايدة"
+},
+"aboutUs": {
+  "title": "معلومات عنا",
+  "description": "هدفنا هو ربط الأشخاص المشغولين الذين يحتاجون إلى يد المساعدة في حياتهم بالأشخاص القريبين القادرين والراغبين في المساعدة. مساعدة كلاهما على عيش حياة أفضل!"
 }
-
-  
-  
-  
 }
