added toggle lang in profile screen

--- a/i18n/locales/ar.json
+++ b/i18n/locales/ar.json
@@ -245,6 +245,7 @@
   "terms": "الشروط والأحكام",
   "faqs": "الأسئلة الشائعة",
   "contactAdmin": "الاتصال بالإدارة",
+  "language": "اللغة",
   "logout": "تسجيل الخروج",
   "logoutAlertTitle": "تم تسجيل الخروج",
   "logoutAlertMessage": "لقد تم تسجيل خروجك بنجاح.",
@@ -538,6 +539,7 @@
   "terms": "الشروط والأحكام",
   "faq": "الأسئلة الشائعة",
   "contact": "تواصل معنا",
+  "language": "اللغة",
   "logout": "تسجيل الخروج",
   "logoutMsg": "تم تسجيل خروجك بنجاح."
 },
