Updated messages error

--- a/i18n/locales/ar.json
+++ b/i18n/locales/ar.json
@@ -13,7 +13,8 @@
 "tagline": "مساعدة موثوقة على بُعد مهمة واحدة",
 "language": {
   "changedEn": "Language changed to English",
-  "changedAr": "تم تغيير اللغة إلى العربية"
+  "changedAr": "تم تغيير اللغة إلى العربية",
+  "switching": "جاري تغيير اللغة..."
 },
   "login": {
     "welcomeBack": "مرحبًا بعودتك ",
