--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -13,7 +13,8 @@
 "tagline": "Reliable Help Just a Task Away",
 "language": {
   "changedEn": "Language changed to English",
-  "changedAr": "تم تغيير اللغة إلى العربية"
+  "changedAr": "تم تغيير اللغة إلى العربية",
+  "switching": "Switching Language..."
 },
   "login": {
     "welcomeBack": "Welcome Back ",
