filter explroe page tasker by distance

--- a/i18n/locales/ar.json
+++ b/i18n/locales/ar.json
@@ -390,6 +390,8 @@
   },
   "taskerExplore": {
     "header": "استكشاف المهام",
+    "sortNearest": "الترتيب حسب الأقرب"
+,
     "location": "الموقع",
     "price": "السعر",
     "bids": "العروض",
