--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -394,6 +394,8 @@
   },
   "taskerExplore": {
     "header": "Explore Tasks",
+    "sortNearest": "Sort by nearest"
+,
     "location": "Location",
     "price": "Price",
     "bids": "Bids",
