added trsnaltion for text

--- a/i18n/locales/ar.json
+++ b/i18n/locales/ar.json
@@ -391,6 +391,7 @@
   "taskerExplore": {
     "header": "استكشاف المهام",
     "sortNearest": "الترتيب حسب الأقرب"
+,  "nearest": "الأقرب"
 ,
     "location": "الموقع",
     "price": "السعر",
